jboss_sample/02_jboss_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jboss
    eks.amazonaws.com/fargate-profile: kus-dotcom-dev-fargate-profile
    environment: test
  name: jboss
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: management
    port: 9990
    protocol: TCP
    targetPort: 9990
  selector:
    app: jboss
    eks.amazonaws.com/fargate-profile: kus-dotcom-dev-fargate-profile
    environment: test
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: jboss
    environment: test
  name: jboss-preview 
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: management
    port: 9990
    protocol: TCP
    targetPort: 9990
  selector:
    app: jboss
    environment: test
  type: ClusterIP
